Checkbox should be fixed size
When filter option name is too long, checkbox shouldn't shrink

--- a/theming/components/_filter-item.scss
+++ b/theming/components/_filter-item.scss
@@ -14,6 +14,7 @@
 
   input#{&}__checkbox {
     margin: 5px 5px 0 1px;
+    flex: 0 0 15px;
   }
 
   &.is-active &__text {
